--- a/individual_statistics_report.html
+++ b/individual_statistics_report.html
@@ -121,7 +121,8 @@
         
         // List of CSV files available in the 'data' folder
         const csvFiles = [ 
-            'data/RD12_North Shore_07072025_Indv.csv'
+            'data/RD12_North Shore_07072025_Indv.csv',
+            'data/RD11_UNSW_28062025_Indv.csv'
         ];
 
         // --- DATA PROCESSING LOGIC ---
