--- a/landing.html
+++ b/landing.html
@@ -88,7 +88,7 @@
             </a>
             
             <!-- Team Statistics Report Card -->
-            <a href="#" class="group block bg-gray-800 p-8 rounded-xl hover:bg-gray-700 transition-all duration-300 ease-in-out transform hover:-translate-y-1 opacity-50 cursor-not-allowed">
+            <a href="team_statistics_report.html" class="group block bg-gray-800 p-8 rounded-xl hover:bg-gray-700 transition-all duration-300 ease-in-out transform hover:-translate-y-1">
                 <div class="flex items-center">
                     <div class="bg-blue-600/20 p-3 rounded-lg">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-blue-400" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
@@ -97,7 +97,7 @@
                     </div>
                     <h3 class="ml-4 text-xl font-bold text-white">Team Statistics</h3>
                 </div>
-                <p class="mt-4 text-gray-400">View team-wide stats like inside 50s, turnovers, and stoppage clearances. (Coming Soon)</p>
+                <p class="mt-4 text-gray-400">View team-wide stats like inside 50s, turnovers, and stoppage clearances.</p>
             </a>
             
             <!-- Momentum Shifts Report Card -->
