--- a/landing.html
+++ b/landing.html
@@ -46,6 +46,20 @@
         <!-- Navigation Grid -->
         <div class="mt-12 grid gap-8 md:grid-cols-2 lg:grid-cols-3 max-w-5xl mx-auto">
             
+            <!-- Video Hub Card -->
+            <a href="video_hub.html" class="group block bg-gray-800 p-8 rounded-xl hover:bg-gray-700 transition-all duration-300 ease-in-out transform hover:-translate-y-1">
+                <div class="flex items-center">
+                    <div class="bg-blue-600/20 p-3 rounded-lg">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-blue-400" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M14.752 11.168l-3.197-2.132A1 1 0 0010 9.87v4.263a1 1 0 001.555.832l3.197-2.132a1 1 0 000-1.664z" />
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+                        </svg>
+                    </div>
+                    <h3 class="ml-4 text-xl font-bold text-white">Video Hub</h3>
+                </div>
+                <p class="mt-4 text-gray-400">Watch match highlights, player reviews, and coaching analysis videos.</p>
+            </a>
+
             <!-- Individual Statistics Report Card -->
             <a href="individual_statistics_report.html" class="group block bg-gray-800 p-8 rounded-xl hover:bg-gray-700 transition-all duration-300 ease-in-out transform hover:-translate-y-1">
                 <div class="flex items-center">
@@ -113,7 +127,7 @@
                 <p class="mt-4 text-gray-400">Visualize the flow of the game and identify key turning points and momentum swings.</p>
             </a>
 
-            <!-- Rotations Report Card -->
+            <!-- Rotations Report Card (Coming Soon) -->
             <a href="#" class="group block bg-gray-800 p-8 rounded-xl hover:bg-gray-700 transition-all duration-300 ease-in-out transform hover:-translate-y-1 opacity-50 cursor-not-allowed">
                 <div class="flex items-center">
                     <div class="bg-blue-600/20 p-3 rounded-lg">
