--- a/gps_statistics_report.html
+++ b/gps_statistics_report.html
@@ -137,7 +137,8 @@
             'data/RD8_Parramatta Goannas_31052025_GPS.csv',
             'data/RD9_Inner West_14062025_GPS.csv', 
             'data/RD10_USYD_21062025_GPS.csv', 
-            'data/RD11_UNSW_28062025_GPS.csv' 
+            'data/RD11_UNSW_28062025_GPS.csv',
+            'data/RD12_North Shore_05072025_GPS.csv'
         ];
 
         // --- DATA PROCESSING LOGIC ---
