--- a/individual_statistics_report.html
+++ b/individual_statistics_report.html
@@ -121,8 +121,8 @@
         let sortState = { key: 'Name', direction: 'asc' };
         
         const csvFiles = [ 
-            'data/RD12_North Shore_05072025_Indv.csv',
-            'data/RD11_UNSW_28062025_Indv.csv'
+            'data/RD11_UNSW_28062025_Indv.csv',
+            'data/RD12_North Shore_05072025_Indv.csv'
         ];
 
         // --- DATA PROCESSING LOGIC ---
