--- a/gps_statistics_report.html
+++ b/gps_statistics_report.html
@@ -45,14 +45,14 @@
         <div class="container mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex items-center justify-between h-16">
                 <div class="flex items-center">
-                    <a href="#" class="flex items-center">
+                    <a href="landing.html" class="flex items-center">
                         <img src="https://placehold.co/40x40/1a202c/ffffff?text=CC" alt="Camden Cats Logo" class="h-10 w-10 rounded-full object-cover" 
                              onerror="this.onerror=null; this.src='https://placehold.co/40x40/1a202c/ffffff?text=Logo';">
                         <span class="ml-3 font-semibold text-xl">Camden Cats Analytics</span>
                     </a>
                 </div>
                 <div class="flex items-center space-x-4">
-                     <a href="#" class="text-sm font-medium text-gray-400 hover:text-white transition-colors duration-200">Back to Dashboard</a>
+                     <a href="landing.html" class="text-sm font-medium text-gray-400 hover:text-white transition-colors duration-200">Back to Dashboard</a>
                     <button id="logout-button" class="text-sm font-medium text-gray-400 hover:text-white transition-colors duration-200">Logout</button>
                 </div>
             </div>
@@ -137,11 +137,11 @@
     <script>
         // --- AUTHENTICATION CHECK ---
         if (sessionStorage.getItem('isLoggedIn') !== 'true') {
-            // window.location.href = 'index.html'; 
+            window.location.href = 'index.html'; 
         }
         document.getElementById('logout-button').addEventListener('click', function() {
             sessionStorage.removeItem('isLoggedIn');
-            // window.location.href = 'index.html';
+            window.location.href = 'index.html';
         });
 
         // --- DOM ELEMENT REFERENCES ---
