--- a/individual_statistics_report.html
+++ b/individual_statistics_report.html
@@ -122,7 +122,8 @@
         
         const csvFiles = [ 
             'data/RD11_UNSW_28062025_Indv.csv',
-            'data/RD12_North Shore_05072025_Indv.csv'
+            'data/RD12_North Shore_05072025_Indv.csv',
+            'data/RD7_St George_19072025_Indv.csv'
         ];
 
         // --- DATA PROCESSING LOGIC ---
