--- a/team_statistics_report.html
+++ b/team_statistics_report.html
@@ -182,7 +182,8 @@
             // --- CONFIGURATION ---
             const TEAM_STATS_FILES = [
                 "data/RD11_UNSW_28062025_TeamStatistics.csv",
-                "data/RD12_North Shore_07072025_TeamStatistics.csv"
+                "data/RD12_North Shore_07072025_TeamStatistics.csv",
+                "data/RD7_St George_19072025_TeamStatistics.csv"
                 // Add more team statistics files here
             ];
             const PRELOAD_FILENAME = "RD12_North Shore_07072025_TeamStatistics.csv";
