--- a/individual_statistics_report.html
+++ b/individual_statistics_report.html
@@ -121,9 +121,16 @@
         let sortState = { key: 'Name', direction: 'asc' };
         
         const csvFiles = [ 
+            'data/RD1_Parramatta Goannas_29032025_Indv.csv',
+            'data/RD4_Sydney University_26042025_Indv.csv',
+            'data/RD5_UNSW_03052025_Indv.csv',
+            'data/RD6_Pennant Hills_17052025_Indv.csv',
+            'data/RD7_St George_19072025_Indv.csv',
+            'data/RD8_Parramatta Goannas_31052025_Indv.csv',
+            'data/RD9_Inner West_14062025_Indv.csv',
+            'data/RD10_Sydney University_21062025_Indv.csv',
             'data/RD11_UNSW_28062025_Indv.csv',
-            'data/RD12_North Shore_05072025_Indv.csv',
-            'data/RD7_St George_19072025_Indv.csv'
+            'data/RD12_North Shore_05072025_Indv.csv'
         ];
 
         // --- DATA PROCESSING LOGIC ---
