--- a/team_statistics_report.html
+++ b/team_statistics_report.html
@@ -181,9 +181,16 @@
 
             // --- CONFIGURATION ---
             const TEAM_STATS_FILES = [
+                "data/RD1_Parramatta Goannas_29032025_TeamStatistics.csv",
+                "data/RD4_Sydney University_26042025_TeamStatistics.csv",
+                "data/RD5_UNSW_03052025_TeamStatistics.csv",
+                "data/RD6_Pennant Hills_17052025_TeamStatistics.csv",
+                "data/RD7_St George_19072025_TeamStatistics.csv",
+                "data/RD8_Parramatta Goannas_31052025_TeamStatistics.csv",
+                "data/RD9_Inner West_14062025_TeamStatistics.csv",
+                "data/RD10_Sydney University_21062025_TeamStatistics.csv",
                 "data/RD11_UNSW_28062025_TeamStatistics.csv",
-                "data/RD12_North Shore_07072025_TeamStatistics.csv",
-                "data/RD7_St George_19072025_TeamStatistics.csv"
+                "data/RD12_North Shore_05072025_TeamStatistics.csv"
                 // Add more team statistics files here
             ];
             const PRELOAD_FILENAME = "RD12_North Shore_07072025_TeamStatistics.csv";
