--- a/gps_statistics_report.html
+++ b/gps_statistics_report.html
@@ -181,6 +181,10 @@
 
         const csvFiles = [ 
             'data/RD1_Parramatta Goannas_29032025_GPS.csv',
+            'data/RD2_Southern Power_05042025_GPS.csv',
+            'data/RD4_Sydney University_26042025_GPS.csv',
+            'data/RD5_UNSW_03052025_GPS.csv',
+            'data/RD6_Pennant Hills_17052025_GPS.csv',
             'data/RD8_Parramatta Goannas_31052025_GPS.csv',
             'data/RD9_Inner West_14062025_GPS.csv', 
             'data/RD10_USYD_21062025_GPS.csv', 
