--- a/gps_statistics_report.html
+++ b/gps_statistics_report.html
@@ -185,6 +185,7 @@
             'data/RD4_Sydney University_26042025_GPS.csv',
             'data/RD5_UNSW_03052025_GPS.csv',
             'data/RD6_Pennant Hills_17052025_GPS.csv',
+            'data/RD7_St George_19072025_GPS.csv',
             'data/RD8_Parramatta Goannas_31052025_GPS.csv',
             'data/RD9_Inner West_14062025_GPS.csv', 
             'data/RD10_USYD_21062025_GPS.csv', 
