--- a/individual_statistics_report.html
+++ b/individual_statistics_report.html
@@ -130,7 +130,8 @@
             'data/RD9_Inner West_14062025_Indv.csv',
             'data/RD10_Sydney University_21062025_Indv.csv',
             'data/RD11_UNSW_28062025_Indv.csv',
-            'data/RD12_North Shore_05072025_Indv.csv'
+            'data/RD12_North Shore_05072025_Indv.csv',
+            'data/RD14_Southern Power_26072025_Indv.csv'
         ];
 
         // --- DATA PROCESSING LOGIC ---
