--- a/gps_statistics_report.html
+++ b/gps_statistics_report.html
@@ -191,7 +191,8 @@
             'data/RD10_USYD_21062025_GPS.csv', 
             'data/RD11_UNSW_28062025_GPS.csv',
             'data/RD12_North Shore_05072025_GPS.csv',
-            'data/RD14_Southern Power_26072025_GPS.csv'
+            'data/RD14_Southern Power_26072025_GPS.csv',
+            'data/RD15_Pennant Hills_02082025_GPS.csv'
         ];
 
         // --- INITIALIZATION ---
