--- a/landing.html
+++ b/landing.html
@@ -46,6 +46,19 @@
         <!-- Navigation Grid -->
         <div class="mt-12 grid gap-8 md:grid-cols-2 lg:grid-cols-3 max-w-5xl mx-auto">
             
+            <!-- Team Summaries Card -->
+            <a href="team_summaries.html" class="group block bg-gray-800 p-8 rounded-xl hover:bg-gray-700 transition-all duration-300 ease-in-out transform hover:-translate-y-1">
+                <div class="flex items-center">
+                    <div class="bg-blue-600/20 p-3 rounded-lg">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-blue-400" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M9 17v-2m3 2v-4m3 4v-6m2 10H7a2 2 0 01-2-2V7a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
+                        </svg>
+                    </div>
+                    <h3 class="ml-4 text-xl font-bold text-white">Team Summaries</h3>
+                </div>
+                <p class="mt-4 text-gray-400">High-level summaries of team performance and key metrics across matches.</p>
+            </a>
+
             <!-- Video Hub Card -->
             <a href="video_hub.html" class="group block bg-gray-800 p-8 rounded-xl hover:bg-gray-700 transition-all duration-300 ease-in-out transform hover:-translate-y-1">
                 <div class="flex items-center">
