--- a/individual_statistics_report.html
+++ b/individual_statistics_report.html
@@ -131,7 +131,8 @@
             'data/RD10_Sydney University_21062025_Indv.csv',
             'data/RD11_UNSW_28062025_Indv.csv',
             'data/RD12_North Shore_05072025_Indv.csv',
-            'data/RD14_Southern Power_26072025_Indv.csv'
+            'data/RD14_Southern Power_26072025_Indv.csv',
+            'data/RD15_Pennant Hills_02082025_Indv.csv'
         ];
 
         // --- DATA PROCESSING LOGIC ---
