--- a/team_statistics_report.html
+++ b/team_statistics_report.html
@@ -191,7 +191,8 @@
                 "data/RD10_Sydney University_21062025_TeamStatistics.csv",
                 "data/RD11_UNSW_28062025_TeamStatistics.csv",
                 "data/RD12_North Shore_05072025_TeamStatistics.csv",
-                "data/RD14_Southern Power_26072025_TeamStatistics.csv"
+                "data/RD14_Southern Power_26072025_TeamStatistics.csv",
+                "data/RD15_Pennant Hills_02082025_TeamStatistics.csv"
                 // Add more team statistics files here
             ];
             const PRELOAD_FILENAME = "RD12_North Shore_07072025_TeamStatistics.csv";
