--- a/gps_statistics_report.html
+++ b/gps_statistics_report.html
@@ -192,7 +192,8 @@
             'data/RD11_UNSW_28062025_GPS.csv',
             'data/RD12_North Shore_05072025_GPS.csv',
             'data/RD14_Southern Power_26072025_GPS.csv',
-            'data/RD15_Pennant Hills_02082025_GPS.csv'
+            'data/RD15_Pennant Hills_02082025_GPS.csv',
+            'data/RD16_St George_09082025_GPS.csv'
         ];
 
         // --- INITIALIZATION ---
