--- a/landing.html
+++ b/landing.html
@@ -140,8 +140,8 @@
                 <p class="mt-4 text-gray-400">Visualize the flow of the game and identify key turning points and momentum swings.</p>
             </a>
 
-            <!-- Rotations Report Card (Coming Soon) -->
-            <a href="#" class="group block bg-gray-800 p-8 rounded-xl hover:bg-gray-700 transition-all duration-300 ease-in-out transform hover:-translate-y-1 opacity-50 cursor-not-allowed">
+            <!-- Rotations Report Card -->
+            <a href="rotations.html" class="group block bg-gray-800 p-8 rounded-xl hover:bg-gray-700 transition-all duration-300 ease-in-out transform hover:-translate-y-1">
                 <div class="flex items-center">
                     <div class="bg-blue-600/20 p-3 rounded-lg">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8 text-blue-400" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
@@ -150,7 +150,7 @@
                     </div>
                     <h3 class="ml-4 text-xl font-bold text-white">Rotations & Time on Field</h3>
                 </div>
-                <p class="mt-4 text-gray-400">Analyse player rotations, time on ground, and fatigue management. (Coming Soon)</p>
+                <p class="mt-4 text-gray-400">Analyse player rotations, time on ground, and fatigue management.</p>
             </a>
 
         </div>
