--- a/video_hub.html
+++ b/video_hub.html
@@ -27,14 +27,14 @@
         <div class="container mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex items-center justify-between h-16">
                 <div class="flex items-center">
-                    <a href="landing.html" class="flex items-center">
+                    <a href="./landing.html" class="flex items-center">
                         <img src="assets/camden_cats_logo.jpg" alt="Camden Cats Logo" class="h-10 w-10 rounded-full object-cover" 
                              onerror="this.onerror=null; this.src='https://placehold.co/40x40/1a202c/ffffff?text=Logo';">
                         <span class="ml-3 font-semibold text-xl">Camden Cats Analytics</span>
                     </a>
                 </div>
                 <div class="flex items-center space-x-4">
-                     <a href="landing.html" class="text-sm font-medium text-gray-400 hover:text-white transition-colors duration-200">Back to Dashboard</a>
+                     <a href="./landing.html" class="text-sm font-medium text-gray-400 hover:text-white transition-colors duration-200">Back to Dashboard</a>
                     <button id="logout-button" class="text-sm font-medium text-gray-400 hover:text-white transition-colors duration-200">Logout</button>
                 </div>
             </div>
@@ -339,18 +339,53 @@
                 </div>
             </a>
 
+            <!-- Qualifying Final Card -->
+            <a href="https://drive.google.com/drive/folders/1tm-i7J3laEyI4FINva4izpBlxG1SNQSi?usp=sharing" target="_blank" rel="noopener noreferrer" class="group block bg-gray-800 rounded-xl hover:bg-gray-700 transition-all duration-300 ease-in-out transform hover:-translate-y-1">
+                <div class="p-5">
+                    <div class="flex justify-between items-center mb-4">
+                        <span class="text-lg font-bold text-blue-400">Qualifying Final</span>
+                        <span class="text-sm font-medium text-gray-500">30.08.2025</span>
+                    </div>
+                    <div class="flex flex-col items-center text-center">
+                        <img src="./assets/Parramatta_Goannas_logo.png" alt="Parramatta Goannas Logo" class="h-32 w-32 object-contain mb-4" onerror="this.onerror=null;this.src='https://placehold.co/128x128/1f2937/ffffff?text=Goannas';">
+                        <h3 class="text-xl font-semibold text-white">Parramatta Goannas</h3>
+                    </div>
+                </div>
+                <div class="bg-gray-700/50 px-5 py-3">
+                    <div class="text-center text-blue-400 font-semibold group-hover:text-white transition duration-300">View Videos &rarr;</div>
+                </div>
+            </a>
+
+            <!-- Semi-Final Card -->
+            <a href="https://drive.google.com/drive/folders/1Vkugf-bCvcdD3M5TcXguMkRFTb0MQwhk?usp=sharing" target="_blank" rel="noopener noreferrer" class="group block bg-gray-800 rounded-xl hover:bg-gray-700 transition-all duration-300 ease-in-out transform hover:-translate-y-1">
+                <div class="p-5">
+                    <div class="flex justify-between items-center mb-4">
+                        <span class="text-lg font-bold text-blue-400">Semi-Final</span>
+                        <span class="text-sm font-medium text-gray-500">07.09.2025</span>
+                    </div>
+                    <div class="flex flex-col items-center text-center">
+                        <img src="./assets/Sydney_University_logo.png" alt="Sydney University Logo" class="h-32 w-32 object-contain mb-4" onerror="this.onerror=null;this.src='https://placehold.co/128x128/1f2937/ffffff?text=Uni';">
+                        <h3 class="text-xl font-semibold text-white">Sydney University</h3>
+                    </div>
+                </div>
+                <div class="bg-gray-700/50 px-5 py-3">
+                    <div class="text-center text-blue-400 font-semibold group-hover:text-white transition duration-300">View Videos &rarr;</div>
+                </div>
+            </a>
+
         </div>
     </main>
     
     <script>
         // --- AUTHENTICATION CHECK ---
         if (sessionStorage.getItem('isLoggedIn') !== 'true') {
-            window.location.href = 'index.html';
+            window.location.href = './index.html';
         }
         document.getElementById('logout-button').addEventListener('click', function() {
             sessionStorage.removeItem('isLoggedIn');
-            window.location.href = 'index.html';
+            window.location.href = './index.html';
         });
     </script>
 </body>
 </html>
+
