--- a/gps_statistics_report.html
+++ b/gps_statistics_report.html
@@ -196,7 +196,8 @@
             'data/RD16_St George_09082025_GPS.csv',
             'data/RD17_Inner West_16082025_GPS.csv',
             'data/RD18_North Shore_23082025_GPS.csv',
-            'data/QF1_Parramatta Goannas_30082025_GPS.csv'
+            'data/QF1_Parramatta Goannas_30082025_GPS.csv',
+            'data/SF_Sydney University_07092025_GPS.csv'
         ];
 
         // --- INITIALIZATION ---
